Target Explorer: Use the URIs of remote files instead URL to persist states.